# kaggle-happy-whale-and-dolphin-74th-place

./: .gitignore  Dockerfile  README.md  evaluate.py  hyperparameter_serch.py  pyproject.toml  shell_train.py  train.py  train_backfin.py  train_backfin_all.py  train_backfin_all_pseudo.py  train_cropped.py  train_cropped_all.py  train_cropped_all_pseudo.py  train_cv.py
config/: 20220307_wide_resnet.py  20220321_efb6.py  20220321_efb6_dev.py  20220321_fast.py  20220321_regnety_006.py  20220321_regnety_080.py  20220321_regnety_080_adam.py  20220322_resnet_rs.py  20220322_resnet_rs_weightdecay_4e-05.py  20220322_resnet_rs_weightdecay_4e-05_adam.py  20220325_convnext.py  20220326_efficinetnetb6.py  20220326_efficinetnetb6_debug.py  20220326_resnetrs.py  20220328_regnety_006_debug.py  20220413_efficinetnetb7.py
data/: data.py
model/: model.py
optimizer/: optimizer_helper.py
utils/: Logger.py  coco2df.py  tf_logger.py  tools.py
